fix center alignment of next and previous icons

--- a/src/applications/content-entries-app/entry/entry.component.scss
+++ b/src/applications/content-entries-app/entry/entry.component.scss
@@ -109,3 +109,6 @@
 		height: calc(100vh - 216px);
 	}
 }
+:host /deep/ span.ui-button-icon-left.fa.kIconarrow_forward, :host /deep/ span.ui-button-icon-left.fa.kIconarrow_backward{
+	margin-left: -.5em;
+}
